--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -25,11 +25,11 @@
         android:summary="@string/pref_instructions_summary"
         android:selectable="false" />
     
-    <org.durka.hallmonitor.PreferenceSwitchable
+    <org.wwolf.S4CoverOff.PreferenceSwitchable
         android:key="pref_enabled"
         android:title="@string/pref_enabled"
         android:summary="@string/pref_enabled_summary"
-        android:fragment="org.durka.hallmonitor.PreferenceFragmentLoader"
+        android:fragment="org.wwolf.S4CoverOff.PreferenceFragmentLoader"
         android:defaultValue="false">
         <extra
             android:name="resource"
@@ -37,13 +37,13 @@
         <extra
             android:name="title"
             android:value="@string/pref_enabled_title" />
-    </org.durka.hallmonitor.PreferenceSwitchable>
+    </org.wwolf.S4CoverOff.PreferenceSwitchable>
     
-    <org.durka.hallmonitor.PreferenceSwitchable
+    <org.wwolf.S4CoverOff.PreferenceSwitchable
         android:key="pref_runasroot"
         android:title="@string/pref_runasroot"
         android:summary="@string/pref_runasroot_summary"
-        android:fragment="org.durka.hallmonitor.PreferenceFragmentLoader"
+        android:fragment="org.wwolf.S4CoverOff.PreferenceFragmentLoader"
         android:defaultValue="false"
         android:dependency="pref_enabled">
         <extra
@@ -52,13 +52,13 @@
         <extra
             android:name="title"
             android:value="@string/pref_runasroot_title" />
-    </org.durka.hallmonitor.PreferenceSwitchable>
+    </org.wwolf.S4CoverOff.PreferenceSwitchable>
     
     <PreferenceScreen
         android:title="@string/pref_widgets"
         android:summary="@string/pref_widgets_summary"
         android:dependency="pref_enabled"
-        android:fragment="org.durka.hallmonitor.PreferenceFragmentLoader">
+        android:fragment="org.wwolf.S4CoverOff.PreferenceFragmentLoader">
         
         <extra
 	        android:name="resource"
@@ -73,7 +73,7 @@
         android:title="@string/pref_optional"
         android:summary="@string/pref_optional_summary"
         android:dependency="pref_enabled"
-        android:fragment="org.durka.hallmonitor.PreferenceFragmentLoader">
+        android:fragment="org.wwolf.S4CoverOff.PreferenceFragmentLoader">
 	    
 	    <extra
 	        android:name="resource"
