--- a/res/xml/preferences_features.xml
+++ b/res/xml/preferences_features.xml
@@ -2,41 +2,41 @@
 
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
 
-		<org.durka.hallmonitor.PreferenceSwitchable
+		<org.wwolf.S4CoverOff.PreferenceSwitchable
 	        android:key="pref_do_notifications"
 	        android:title="@string/pref_notifications"
 	        android:summary="@string/pref_notifications_summary"
 	        android:defaultValue="false" />
 	    
-	    <org.durka.hallmonitor.PreferenceSwitchable
+	    <org.wwolf.S4CoverOff.PreferenceSwitchable
 	        android:key="pref_flash_controls"
 	        android:title="@string/pref_flash_controls"
 	        android:summary="@string/pref_flash_controls_summary"
 	        android:defaultValue="false" />
 	    
-	    <org.durka.hallmonitor.PreferenceSwitchable
+	    <org.wwolf.S4CoverOff.PreferenceSwitchable
 	    	android:key="pref_flash_controls_alternative"
   	        android:title="@string/pref_flash_controls_alternative"
  	        android:summary="@string/pref_flash_controls_alternative_summary"
  	        android:defaultValue="false" />
 	    
-	    <org.durka.hallmonitor.PreferenceSwitchable
+	    <org.wwolf.S4CoverOff.PreferenceSwitchable
 	        android:key="pref_camera_controls"
 	        android:title="@string/pref_camera_controls"
 	        android:summary="@string/pref_camera_controls_summary"
 	        android:defaultValue="false"/>
 	
-	    <org.durka.hallmonitor.PreferenceSwitchable
+	    <org.wwolf.S4CoverOff.PreferenceSwitchable
 	        android:key="pref_alarm_controls"
 	        android:title="@string/pref_alarm_controls"
 	        android:summary="@string/pref_alarm_controls_summary"
 	        android:defaultValue="false"/>
 	
-	    <org.durka.hallmonitor.PreferenceSwitchable
+	    <org.wwolf.S4CoverOff.PreferenceSwitchable
 	        android:key="pref_phone_controls_user"
 	        android:title="@string/pref_phone_screen"
 	        android:summary="@string/pref_phone_screen_summary"
 	        android:defaultValue="false">
-	    </org.durka.hallmonitor.PreferenceSwitchable>
+	    </org.wwolf.S4CoverOff.PreferenceSwitchable>
 	    
 </PreferenceScreen>
