--- a/res/xml/preferences_root.xml
+++ b/res/xml/preferences_root.xml
@@ -2,7 +2,7 @@
 
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <org.durka.hallmonitor.PreferenceSwitchable
+    <org.wwolf.S4CoverOff.PreferenceSwitchable
         android:key="pref_realhall"
         android:title="@string/pref_realhall"
         android:summary="@string/pref_realhall_summary"
