--- a/res/layout/activity_configuration.xml
+++ b/res/layout/activity_configuration.xml
@@ -21,7 +21,7 @@
     android:layout_alignParentLeft="true"
     android:layout_alignParentTop="true">
     
-    <fragment class="org.wwolf.S4CoverOff.ConfigurationFragment"
+    <fragment class="org.wwolf.s4coveroff.ConfigurationFragment"
             android:id="@+id/configfrag"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
