--- a/res/layout/activity_default.xml
+++ b/res/layout/activity_default.xml
@@ -22,7 +22,7 @@
             android:layout_height="match_parent"
             android:visibility="invisible" >
 
-            <org.wwolf.S4CoverOff.CameraPreview
+            <org.wwolf.s4coveroff.CameraPreview
                 android:id="@+id/default_camera"
                 android:layout_width="125dp"
                 android:layout_height="125dp"
