--- a/res/xml/preferences_general.xml
+++ b/res/xml/preferences_general.xml
@@ -2,7 +2,7 @@
 
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
 	    
-    <org.wwolf.S4CoverOff.PreferenceSwitchable
+    <org.wwolf.s4coveroff.PreferenceSwitchable
 	    android:key="pref_layout"
 	    android:title="@string/pref_layout"
 	    android:summary="@string/pref_layout_summary"
